# ibm_ml

./: .gitignore  README.md  functions.py  pyproject.toml
classification/: get_data.py
classification/notebooks/: assignment.qmd  assignment_instructions.html  assignment_instructions.qmd
deep_learning/: resnet.txt  resnet_scheduler.txt
deep_learning/notebooks/: ConvNeXt_training.qmd  EfficientNet_Lightning.qmd  EfficientNet_training.qmd  ResNet_training.qmd  ResNet_training_fastai.qmd  assignment.html  assignment.qmd  assignment_instructions.html  assignment_instructions.qmd  clean_dataset.html  clean_dataset.qmd  convnext_results.txt  efficientnet_results.txt  predictions.qmd  resnet18_finetuning_fastai.qmd
deep_learning/notebooks/old/: base_cnn_train_loop.ipynb  efficientnet.ipynb  resnet_finetuning_fastai.ipynb
unsupervised/: get_data.py
unsupervised/notebooks/: assignment.qmd  assignment_instructions.html  assignment_instructions.qmd  exploration.html  exploration.qmd
