[project]
name = "ibm-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "albumentations>=1.4.22",
    "catboost>=1.2.5",
    "cleanlab>=2.6.5",
    "cleanvision>=0.3.6",
    "fastai>=2.7.18",
    "great-tables>=0.14.0",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.5",
    "kornia[x]>=0.7.4",
    "lets-plot>=4.5.1",
    "lightgbm>=4.5.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotnine>=0.14.3",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "quarto>=0.1.0",
    "scikit-learn>=1.6.0",
    "timm>=1.0.12",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
    "xgboost>=2.1.3",
]
